<resources>
    <string name="app_name">Sınav Puan Hesapla</string>
    <string name="button_calculate">Hesapla</string>
    <string name="button_save">Kaydet</string>
    <string name="button_statics">İstatistikler</string>
    <string name="button_close">Kapat</string>
    <string name="button_ok">Tamam</string>
    <string name="button_yes">Evet</string>
    <string name="button_no">Hayır</string>
    <string name="button_recalculate">Tekrar Hesapla</string>
    <string name="button_show_result">Sonucumu Göster</string>
    <string name="ales">ALES</string>
    <string name="kpss">KPSS</string>
    <string name="yks">YKS</string>
    <string name="yds">YDS</string>
    <string name="ekpss">EKPSS</string>
    <string name="tus">TUS</string>
    <string name="dgs">DGS</string>
    <string name="ydus">YDUS</string>
    <string name="dus">DUS</string>
    <string name="eus">EUS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ayarlar</string>
    <string name="action_alert">Uyarı</string>
    <string name="action_info">Hakkında</string>
    <string name="lesson_maths">Matematik</string>
    <string name="lesson_basic_maths">Temel Matematik</string>
    <string name="lesson_geometry">Geometri</string>
    <string name="lesson_turkish">Türkçe</string>
    <string name="lesson_science">Fen Bilgisi</string>
    <string name="lesson_social_studies">Sosyal Bilgiler</string>
    <string name="lesson_physics">Fizik</string>
    <string name="lesson_chemistry">Kimya</string>
    <string name="lesson_biology">Biyoloji</string>
    <string name="lesson_philosophy">Felsefe</string>
    <string name="lesson_religion">Din Kültürü</string>
    <string name="lesson_geographics">Coğrafya</string>
    <string name="lesson_history">Tarih</string>
    <string name="lesson_literature">Türk Dili ve Edebiyatı</string>
    <string name="lesson_language">Yabancı Dil</string>
    <string name="lesson_numerical">Sayısal Testi</string>
    <string name="lesson_verbal">Sözel Testi</string>
    <string name="lesson_general_knowledge">Genel Kültür</string>
    <string name="lesson_general_ability">Genel Yetenek</string>
    <string name="lesson_basic_sciences">Temel Bilimler</string>
    <string name="lesson_clinical_sciences">Klinik Bilimler</string>
    <string name="lesson_basic_medicine_sciences">Temel Tıp Bilimleri</string>
    <string name="lesson_clinical_medicine_sciences">Klinik Tıp Bilimleri</string>
    <string name="lesson_eus">Eczacılıkta Uzmanık Sınavı</string>
    <string name="diploma_grade">Diploma Notu</string>
    <string name="diploma_grade_description">0-100</string>
    <string name="associate_degree_success_grade">Önlisans Başarı Puanı</string>
    <string name="diploma_notification">Daha Önce Bir Bölüme Yerleştim</string>
    <string name="dgs_notification">Daha önce Bir DGS programına yerleştim</string>
    <string name="ekpss_type">EKPSS Düzeyi</string>
    <string name="exam_yks_1">TYT Sınavı (YKS 1. Oturum)</string>
    <string name="exam_yks_2">AYT Sınavı (YKS 2. Oturum)</string>
    <string name="exam_yks_2_science">Fen Bilimleri</string>
    <string name="exam_yks_2_social1">Türk Dili ve Edebiyatı / Sosyal Bilimler 1</string>
    <string name="exam_yks_2_social2">Sosyal Bilimler 2</string>
    <string name="exam_dgs_before_result">Önceki DGS Sonucu</string>
    <string name="question_true">Doğru</string>
    <string name="question_false">Yanlış</string>
    <string name="question_net">Net</string>
    <string name="questions_six">6 Soru</string>
    <string name="questions_ten">10 Soru</string>
    <string name="questions_eleven">11 Soru</string>
    <string name="questions_twelve">12 Soru</string>
    <string name="questions_thirteen">13 Soru</string>
    <string name="questions_fourteen">14 Soru</string>
    <string name="questions_twenty">20 Soru</string>
    <string name="questions_twenty_four">24 Soru</string>
    <string name="questions_thirty">30 Soru</string>
    <string name="questions_forty">40 Soru</string>
    <string name="questions_fifty">50 Soru</string>
    <string name="questions_sixty">60 Soru</string>
    <string name="questions_eighty">80 Soru</string>
    <string name="questions_hundred">100 Soru</string>
    <string name="questions_hundred_twenty">120 Soru</string>
    <string name="result_maths_net">Matematik Testi</string>
    <string name="result_turkish_net">Türkçe Testi</string>
    <string name="result_default_net">0 Net</string>
    <string name="result_numerical">Sayısal Puanı</string>
    <string name="result_verbal">Sözel Puanı</string>
    <string name="result_equal_weight">Eşit Ağırlık Puanı</string>
    <string name="result_language">Yabancı Dil Puanı</string>
    <string name="result_default">00.00</string>
    <string name="result_save_name">Sınav Adını Giriniz...</string>
    <string name="result_calculated_points">Yerleştirme Puanları</string>
    <string name="result_simple_points">Ham Puanlar</string>
    <string name="result_graduate_medicine_title">Tıp Fakültesi Mezunu Adaylar İçin Puanlar</string>
    <string name="result_not_graduate_medicine_title">Tıp Dışı Meslek Mensubu Adaylar İçin Puanlar</string>
    <string name="result_graduate_medicine_k_point">Ağırlıklı Klinik Tıp Bilimleri (K) Puanı</string>
    <string name="result_graduate_medicine_t_point">Ağırlıklı Temel Tıp Bilimleri (T) Puanı</string>
    <string name="result_graduate_medicine_a_point">Aile Hekimliği Uzmanlık Eğitimi (A) Puanı</string>
    <string name="result_not_graduate_medicine_t_point">Ağırlıklı Temel Tıp Bilimleri (T) Puanı</string>
    <string name="result_tyt">TYT Puanı</string>
    <string name="result_yds">YDS Puanı</string>
    <string name="result_yds_level">YDS Seviyesi</string>
    <string name="result_ekpss">EKPSS Puanı</string>
    <string name="result_dus">DUS Puanı</string>
    <string name="result_eus">EUS Puanı</string>
    <string name="error_validate">Lütfen bu alanı doldurunuz!</string>
</resources>
