<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="326dp"
    android:layout_height="wrap_content"
    android:background="@drawable/my_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/yellow"
        android:gravity="center"
        android:paddingRight="@dimen/activity_margin"
        android:paddingLeft="@dimen/activity_margin"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/result_icon"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="Sınav Sonucum"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"></LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/result_eus"
                    android:textSize="@dimen/middle_text_size"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/textViewEUSResult"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/result_default"
                    android:textSize="@dimen/middle_text_size"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_margin">
            <EditText
                android:id="@+id/editTextEUSDialogExamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/middle_text_size"
                android:textColor="@color/black"
                android:hint="@string/result_save_name"
                android:maxLength="20"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonEUSDialogSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/activity_margin_half"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/my_button"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:textSize="@dimen/middle_text_size"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/buttonEUSDialogClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_margin_half"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/my_button"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:textSize="@dimen/middle_text_size"
            android:text="@string/button_close" />

    </LinearLayout>

</LinearLayout>
