<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="326dp"
    android:layout_height="wrap_content"
    android:background="@drawable/my_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/yellow"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/result_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Sınav Sonucum"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"></LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/activity_margin"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/result_yds"
                    android:textColor="@color/black"
                    android:textSize="@dimen/middle_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewYDSSavedResult"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/result_default"
                    android:textColor="@color/black"
                    android:textSize="@dimen/middle_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/result_yds_level"
                    android:textColor="@color/black"
                    android:textSize="@dimen/middle_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewYDSSavedResultLevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/result_default"
                    android:textColor="@color/black"
                    android:textSize="@dimen/middle_text_size" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonYDSSavedResultDialogStatics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_margin_half"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/button_statics"
            android:textColor="@color/yellow"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonYDSSavedResultDialogClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin_half"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/button_close"
            android:textColor="@color/yellow"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
